// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Featured item Default renders correctly 1`] = `
<jest>
  <article
    class="ecl-featured-item"
  >
    <div
      class="ecl-featured-item__container"
    >
      <div
        class="ecl-featured-item__item"
      >
        <div
          class="ecl-featured-item__title"
          id="featured-item-example-title"
        >
          Title: Ut enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
        </div>
        <div
          class="ecl-featured-item__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        </div>
        <a
          aria-describedby="featured-item-example-title"
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-featured-item__link"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Read more
          </span>
          <span
            aria-hidden="true"
            class="wt-icon--arrow-left ecl-icon ecl-icon--m ecl-icon--flip-horizontal ecl-link__icon ecl-icon--arrow-left"
          />
        </a>
      </div>
      <div
        class="ecl-featured-item__item"
      >
        <div
          class="ecl-media-container ecl-featured-item__media_container"
        >
          <figure
            class="ecl-media-container__figure"
          >
            <picture
              class="ecl-picture ecl-media-container__picture"
            >
              <img
                alt="Lorem ipsum dolor sit amet"
                class="ecl-media-container__media"
                src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
              />
            </picture>
            <figcaption
              class="ecl-media-container__caption"
            >
              Lorem ipsum dolor sit amet consectetur adipiscing elite tempored incididunt ut labore et dolore magna aliqua lorem ipsum dolor sit amet consectetur adipiscing.
              <br />
              @Copyright
            </figcaption>
          </figure>
        </div>
      </div>
    </div>
  </article>
</jest>
`;

exports[`Featured item Default renders correctly without image 1`] = `
<jest>
  <article
    class="ecl-featured-item"
  >
    <div
      class="ecl-featured-item__container"
    >
      <div
        class="ecl-featured-item__item"
      >
        <div
          class="ecl-featured-item__title"
          id="featured-item-example-title"
        >
          Title: Ut enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
        </div>
        <div
          class="ecl-featured-item__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        </div>
        <a
          aria-describedby="featured-item-example-title"
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-featured-item__link"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Read more
          </span>
          <span
            aria-hidden="true"
            class="wt-icon--arrow-left ecl-icon ecl-icon--m ecl-icon--flip-horizontal ecl-link__icon ecl-icon--arrow-left"
          />
        </a>
      </div>
    </div>
  </article>
</jest>
`;

exports[`Featured item Highlight renders correctly 1`] = `
<jest>
  <article
    class="ecl-featured-item ecl-featured-item--highlight"
  >
    <div
      class="ecl-featured-item__container"
    >
      <div
        class="ecl-featured-item__item"
      >
        <div
          class="ecl-featured-item__title"
          id="featured-item-example-title"
        >
          Title: Ut enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
        </div>
        <div
          class="ecl-featured-item__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        </div>
        <a
          aria-describedby="featured-item-example-title"
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-featured-item__link"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Read more
          </span>
          <span
            aria-hidden="true"
            class="wt-icon--arrow-left ecl-icon ecl-icon--m ecl-icon--flip-horizontal ecl-link__icon ecl-icon--arrow-left"
          />
        </a>
      </div>
      <div
        class="ecl-featured-item__item"
      >
        <div
          class="ecl-media-container ecl-featured-item__media_container"
        >
          <figure
            class="ecl-media-container__figure"
          >
            <picture
              class="ecl-picture ecl-media-container__picture"
            >
              <img
                alt="Lorem ipsum dolor sit amet"
                class="ecl-media-container__media"
                src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
              />
            </picture>
            <figcaption
              class="ecl-media-container__caption"
            >
              Lorem ipsum dolor sit amet consectetur adipiscing elite tempored incididunt ut labore et dolore magna aliqua lorem ipsum dolor sit amet consectetur adipiscing.
              <br />
              @Copyright
            </figcaption>
          </figure>
        </div>
      </div>
    </div>
  </article>
</jest>
`;

exports[`Featured item Simple renders correctly 1`] = `
<jest>
  <article
    class="ecl-featured-item ecl-featured-item--simple"
  >
    <div
      class="ecl-featured-item__container"
    >
      <div
        class="ecl-featured-item__item"
      >
        <div
          class="ecl-featured-item__title"
          id="featured-item-example-title"
        >
          Title: Ut enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
        </div>
        <div
          class="ecl-featured-item__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        </div>
        <a
          aria-describedby="featured-item-example-title"
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-featured-item__link"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Read more
          </span>
          <span
            aria-hidden="true"
            class="wt-icon--arrow-left ecl-icon ecl-icon--m ecl-icon--flip-horizontal ecl-link__icon ecl-icon--arrow-left"
          />
        </a>
      </div>
      <div
        class="ecl-featured-item__item"
      >
        <div
          class="ecl-media-container ecl-featured-item__media_container"
        >
          <figure
            class="ecl-media-container__figure"
          >
            <picture
              class="ecl-picture ecl-media-container__picture"
            >
              <img
                alt="Lorem ipsum dolor sit amet"
                class="ecl-media-container__media"
                src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
              />
            </picture>
            <figcaption
              class="ecl-media-container__caption"
            >
              Lorem ipsum dolor sit amet consectetur adipiscing elite tempored incididunt ut labore et dolore magna aliqua lorem ipsum dolor sit amet consectetur adipiscing.
              <br />
              @Copyright
            </figcaption>
          </figure>
        </div>
      </div>
    </div>
  </article>
</jest>
`;

exports[`Featured item renders correctly with extra attributes 1`] = `
<jest>
  <article
    class="ecl-featured-item"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-featured-item__container"
    >
      <div
        class="ecl-featured-item__item"
      >
        <div
          class="ecl-featured-item__title"
          id="featured-item-example-title"
        >
          Title: Ut enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
        </div>
        <div
          class="ecl-featured-item__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        </div>
        <a
          aria-describedby="featured-item-example-title"
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-featured-item__link"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Read more
          </span>
          <span
            aria-hidden="true"
            class="wt-icon--arrow-left ecl-icon ecl-icon--m ecl-icon--flip-horizontal ecl-link__icon ecl-icon--arrow-left"
          />
        </a>
      </div>
      <div
        class="ecl-featured-item__item"
      >
        <div
          class="ecl-media-container ecl-featured-item__media_container"
        >
          <figure
            class="ecl-media-container__figure"
          >
            <picture
              class="ecl-picture ecl-media-container__picture"
            >
              <img
                alt="Lorem ipsum dolor sit amet"
                class="ecl-media-container__media"
                src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
              />
            </picture>
            <figcaption
              class="ecl-media-container__caption"
            >
              Lorem ipsum dolor sit amet consectetur adipiscing elite tempored incididunt ut labore et dolore magna aliqua lorem ipsum dolor sit amet consectetur adipiscing.
              <br />
              @Copyright
            </figcaption>
          </figure>
        </div>
      </div>
    </div>
  </article>
</jest>
`;

exports[`Featured item renders correctly with extra class names 1`] = `
<jest>
  <article
    class="ecl-featured-item custom-class custom-class--test"
  >
    <div
      class="ecl-featured-item__container"
    >
      <div
        class="ecl-featured-item__item"
      >
        <div
          class="ecl-featured-item__title"
          id="featured-item-example-title"
        >
          Title: Ut enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
        </div>
        <div
          class="ecl-featured-item__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        </div>
        <a
          aria-describedby="featured-item-example-title"
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-featured-item__link"
          href="/example"
        >
          <span
            class="ecl-link__label"
          >
            Read more
          </span>
          <span
            aria-hidden="true"
            class="wt-icon--arrow-left ecl-icon ecl-icon--m ecl-icon--flip-horizontal ecl-link__icon ecl-icon--arrow-left"
          />
        </a>
      </div>
      <div
        class="ecl-featured-item__item"
      >
        <div
          class="ecl-media-container ecl-featured-item__media_container"
        >
          <figure
            class="ecl-media-container__figure"
          >
            <picture
              class="ecl-picture ecl-media-container__picture"
            >
              <img
                alt="Lorem ipsum dolor sit amet"
                class="ecl-media-container__media"
                src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
              />
            </picture>
            <figcaption
              class="ecl-media-container__caption"
            >
              Lorem ipsum dolor sit amet consectetur adipiscing elite tempored incididunt ut labore et dolore magna aliqua lorem ipsum dolor sit amet consectetur adipiscing.
              <br />
              @Copyright
            </figcaption>
          </figure>
        </div>
      </div>
    </div>
  </article>
</jest>
`;
